--- a/app/src/main/res/layout/content_form_edit_profil.xml
+++ b/app/src/main/res/layout/content_form_edit_profil.xml
@@ -41,7 +41,7 @@
                     android:layout_width="@dimen/thumb_height"
                     android:layout_height="@dimen/thumb_height"
                     android:layout_weight="1"
-                    android:background="@drawable/user_ava_man" />
+                    android:background="@drawable/img" />
 
                 <Button
                     android:id="@+id/btnUploadFoto"
