--- a/app/src/main/res/layout/content_profile.xml
+++ b/app/src/main/res/layout/content_profile.xml
@@ -164,20 +164,10 @@
                                 android:textSize="@dimen/small_text" />
 
                             <TextView
-                                android:id="@+id/pr_postal_code"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@+id/pr_address_name"
-                                android:layout_marginLeft="@dimen/xmin_padding"
-                                android:layout_toEndOf="@+id/pr_address_ico"
-                                android:text="-"
-                                android:textSize="@dimen/small_text" />
-
-                            <TextView
                                 android:id="@+id/pr_village"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_below="@+id/pr_postal_code"
+                                android:layout_below="@+id/pr_address_name"
                                 android:layout_marginLeft="@dimen/xmin_padding"
                                 android:layout_toEndOf="@+id/pr_address_ico"
                                 android:text=""
@@ -187,7 +177,7 @@
                                 android:id="@+id/pr_distric"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_below="@+id/pr_postal_code"
+                                android:layout_below="@+id/pr_address_name"
                                 android:layout_marginLeft="@dimen/xmin_padding"
                                 android:layout_toEndOf="@+id/pr_village"
                                 android:text=""
@@ -211,6 +201,16 @@
                                 android:layout_marginLeft="@dimen/xmin_padding"
                                 android:layout_toEndOf="@+id/pr_city"
                                 android:text=""
+                                android:textSize="@dimen/small_text" />
+
+                            <TextView
+                                android:id="@+id/pr_postal_code"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_below="@+id/pr_province"
+                                android:layout_marginLeft="@dimen/xmin_padding"
+                                android:layout_toEndOf="@+id/pr_address_ico"
+                                android:text="-"
                                 android:textSize="@dimen/small_text" />
 
                         </RelativeLayout>
